--- a/src/Emulation/CMakeLists.txt
+++ b/src/Emulation/CMakeLists.txt
@@ -1,19 +1,13 @@
 # Define an executable
 add_executable(psxemu
-    src/Bios.c
+    "src/Bios.c"
     src/Bus.c
-    src/Cpu.c
-    src/Cpu.h
+    "src/Cpu/Cpu.c"
     src/System.c
     src/psxemu.c 
     src/Memory.c 
-    src/Memory.h 
-    src/Bus.h 
-    src/Bios.h 
-    src/Devices.h 
     src/Devices.c 
-    src/Exceptions.h 
-    src/Types.h "src/System.h"  "src/Interrupts.h" "src/Gpu.h" "src/Gpu.c" "src/Exceptions.c" "src/Interrupts.c" "src/Types.c")
+    "src/Gpu.c" "src/Exceptions.c" "src/Interrupts.c" "src/Types.c" "src/Clock.c")
 
 # Define the libraries this project depends upon
 target_link_libraries(psxemu
@@ -24,19 +18,13 @@ target_link_libraries(psxemu
 # Every library has unit tests, of course
 add_executable(testPsxemu
     "tests/tests.cpp"
-    src/Bios.c
+    "src/Bios.c"
     src/Bus.c
-    src/Cpu.c
-    src/Cpu.h
+    "src/Cpu/Cpu.c"
     src/System.c
     src/Memory.c 
-    src/Memory.h 
-    src/Bus.h 
-    src/Bios.h 
-    src/Devices.h 
     src/Devices.c 
-    src/Exceptions.h 
-    src/Types.h "src/System.h"  "src/Interrupts.h" "src/Gpu.h" "src/Gpu.c" "src/Exceptions.c" "src/Interrupts.c" "src/Types.c")
+    "src/Gpu.c" "src/Exceptions.c" "src/Interrupts.c" "src/Types.c" "src/Clock.c")
 
 target_compile_definitions(testPsxemu PRIVATE TESTING=1)
 target_link_libraries(testPsxemu
